# log-viewer

./: .gitignore  Cargo.toml  README.md  install.sh  justfile  log-viewer.desktop
extra/: mini-logs.txt
src/: main.rs  mount.rs
ui/: appwindow.slint  palette.slint
ui/pages/: about.slint  export.slint  matauri-bay.slint
